--- a/io.qt.Linguist.yml
+++ b/io.qt.Linguist.yml
@@ -1,8 +1,8 @@
 app-id: io.qt.Linguist
 runtime: org.kde.Sdk
-runtime-version: "6.2"
+runtime-version: "6.3"
 sdk: org.kde.Sdk
-command: /usr/bin/linguist
+command: linguist
 finish-args:
   - --socket=fallback-x11
   - --socket=wayland
@@ -13,6 +13,8 @@ modules:
   - name: linguist
     buildsystem: simple
     build-commands:
+      - mkdir -p /app/bin
+      - ln -s /usr/bin/linguist /app/bin/linguist
       - install -Dm644 io.qt.Linguist.png /app/share/icons/hicolor/128x128/apps/io.qt.Linguist.png
       - install -Dm644 io.qt.Linguist.desktop /app/share/applications/io.qt.Linguist.desktop
       - install -Dm644 io.qt.Linguist.metainfo.xml /app/share/metainfo/io.qt.Linguist.metainfo.xml
