Fix install command

--- a/io.qt.Linguist.yml
+++ b/io.qt.Linguist.yml
@@ -15,9 +15,9 @@ modules:
     build-commands:
       - mkdir -p /app/bin
       - ln -s /usr/bin/linguist $FLATPAK_DEST/bin/linguist
-      - install -Dm644 -t io.qt.Linguist.png $FLATPAK_DEST/share/icons/hicolor/128x128
-      - install -Dm644 -t io.qt.Linguist.desktop $FLATPAK_DEST/share/applications
-      - install -Dm644 -t io.qt.Linguist.metainfo.xml $FLATPAK_DEST/share/metainfo
+      - install -Dm644 io.qt.Linguist.png -t $FLATPAK_DEST/share/icons/hicolor/128x128
+      - install -Dm644 io.qt.Linguist.desktop -t $FLATPAK_DEST/share/applications
+      - install -Dm644 io.qt.Linguist.metainfo.xml -t $FLATPAK_DEST/share/metainfo
     sources:
       - type: file
         path: io.qt.Linguist.png
