--- a/io.qt.Linguist.yaml
+++ b/io.qt.Linguist.yaml
@@ -5,6 +5,7 @@ sdk: org.kde.Sdk
 command: linguist
 finish-args:
   - --socket=fallback-x11
+  - --filesystem=host:rw
   - --socket=wayland
   - --device=dri
   - --share=ipc
